@@ -5,7 +5,7 @@ plugins {
   checkstyle
   id("com.github.sherter.google-java-format") version "0.9"
   id("org.jmailen.kotlinter") version "3.10.0"
-  id("com.github.cs125-illinois.questioner") version "2022.6.1"
+  id("com.github.cs125-illinois.questioner") version "2022.6.2"
   id("com.github.ben-manes.versions") version "0.42.0"
   id("io.gitlab.arturbosch.detekt") version "1.20.0"
 }
@@ -16,7 +16,7 @@ repositories {
 }
 dependencies {
   implementation(kotlin("stdlib"))
-  implementation("com.github.cs125-illinois.questioner:lib:2022.6.1")
+  implementation("com.github.cs125-illinois.questioner:lib:2022.6.2")
 }
 tasks.withType<Test> {
   useJUnitPlatform()
@@ -24,6 +24,8 @@ tasks.withType<Test> {
   jvmArgs(
     "-ea", "-Xms4G", "-Xmx8G", "--enable-preview", "-XX:+UseZGC",
     "-Dfile.encoding=UTF-8",
+    "--add-opens java.base/java.lang=ALL-UNNAMED",
+    "--add-opens java.base/java.util=ALL-UNNAMED",
     "--add-exports", "jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED",
     "--add-exports", "jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED",
     "--add-exports", "jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED",
